Change css to solve bug on mobile?

--- a/css/style.scss
+++ b/css/style.scss
@@ -90,7 +90,7 @@ font-family: 'Lato', sans-serif;
 
 .inset {
   padding: 20px;
-  margin-right: 40px;
+  margin-right: 20px;
 }
 
 .flex-video {
